tests/lean/rewrite.lean.expected.out
rewrite.lean:8:4: error: invalid rewrite tactic, failed to synthesize type class instance for is_one_class n
